cmake_minimum_required(VERSION 3.17)
project(ed_tp2)

set(CMAKE_CXX_STANDARD 14)

add_executable(ed_tp2 src_ordenacao_alianca_rebelde_algoritmo1/main.cc src_ordenacao_alianca_rebelde_algoritmo1/models/civilization/Civilization.cpp src_ordenacao_alianca_rebelde_algoritmo1/models/civilization/Civilization.h)